// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConfigureNotifications Email 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        notifications.titleEmail
      </h1>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-form-group"
              data-id="emailIds-0"
            >
              <label
                class="bp3-label"
                for="emailIds"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="configureEmailNotifications_emailIds"
                >
                  notifications.emailRecipients
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <textarea
                  autocomplete="off"
                  class="bp3-input bp3-fill"
                  maxlength="1024"
                  name="emailIds"
                >
                  test@harness.io
                </textarea>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="undefined-1"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="configureEmailNotifications_userGroups"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label"
                    >
                      notifications.labelEmailUserGroups
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                  >
                    <div
                      class="StyledProps--font StyledProps--main pointer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                      >
                        common.selectUserGroups
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main"
              style="align-items: center;"
            >
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="Button--withDocsTooltip"
                    data-tooltip-id="testEmailConfigButton"
                  >
                    <button
                      class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                      type="button"
                    >
                      <span
                        class="bp3-button-text"
                      >
                        test
                      </span>
                    </button>
                  </div>
                </span>
              </span>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-huge"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  submit
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigureNotifications Microsoft Teams - edit case 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        notifications.helpMSTeams
      </p>
      <a
        href="https://ngdocs.harness.io/article/xcb28vgn82-send-notifications-to-microsoft-teams"
        rel="noreferrer"
        target="_blank"
      >
        learnMore
      </a>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-form-group"
              data-id="msTeamKeys.0-0"
            >
              <label
                class="bp3-label"
                for="msTeamKeys"
              >
                notifications.labelMSTeam
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--padding-bottom-small"
                >
                  <div
                    class="bp3-form-group urlInput"
                    data-id="msTeamKeys.0-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="msTeamKeys.0"
                          placeholder="notifications.enterMicrosoftTeamsUrl"
                          type="text"
                          value="test-1"
                        />
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="remove-msTeamKeys-[0]"
                    style="align-self: flex-start;"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 20"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                  data-testid="add-msTeamKeys"
                  style="padding: 0px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    plusAdd
                  </span>
                </button>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xxlarge"
              style="align-items: center;"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  test
                </span>
              </button>
            </div>
            <div
              class="bp3-form-group"
              data-id="undefined-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="configureMSTeamsNotifications_userGroups"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label"
                    >
                      notifications.labelMSTeamsUserGroups
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                  >
                    <div
                      class="StyledProps--font StyledProps--main pointer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                      >
                        common.selectUserGroups
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-xxlarge StyledProps--margin-bottom-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  submit
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigureNotifications Microsoft Teams - edit case 2`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        notifications.helpMSTeams
      </p>
      <a
        href="https://ngdocs.harness.io/article/xcb28vgn82-send-notifications-to-microsoft-teams"
        rel="noreferrer"
        target="_blank"
      >
        learnMore
      </a>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-form-group"
              data-id="msTeamKeys.0-0"
            >
              <label
                class="bp3-label"
                for="msTeamKeys"
              >
                notifications.labelMSTeam
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--padding-bottom-small"
                >
                  <div
                    class="bp3-form-group urlInput"
                    data-id="msTeamKeys.0-1"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="msTeamKeys.0"
                          placeholder="notifications.enterMicrosoftTeamsUrl"
                          type="text"
                          value="test-1"
                        />
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="remove-msTeamKeys-[0]"
                    style="align-self: flex-start;"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 20"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                  data-testid="add-msTeamKeys"
                  style="padding: 0px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    plusAdd
                  </span>
                </button>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xxlarge"
              style="align-items: center;"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  test
                </span>
              </button>
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main statusIcon red"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="undefined-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="configureMSTeamsNotifications_userGroups"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label"
                    >
                      notifications.labelMSTeamsUserGroups
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                  >
                    <div
                      class="StyledProps--font StyledProps--main pointer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                      >
                        common.selectUserGroups
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-xxlarge StyledProps--margin-bottom-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  submit
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigureNotifications Microsoft Teams 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <p
        class="StyledProps--font StyledProps--main"
      >
        notifications.helpMSTeams
      </p>
      <a
        href="https://ngdocs.harness.io/article/xcb28vgn82-send-notifications-to-microsoft-teams"
        rel="noreferrer"
        target="_blank"
      >
        learnMore
      </a>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-form-group"
              data-id="msTeamKeys-0"
            >
              <label
                class="bp3-label"
                for="msTeamKeys"
              >
                notifications.labelMSTeam
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--horizontal Layout--layout-spacing-small StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--padding-bottom-small"
                >
                  <div
                    class="bp3-form-group urlInput"
                  >
                    <div
                      class="bp3-form-content"
                    >
                      <div
                        class="bp3-input-group"
                      >
                        <input
                          autocomplete="off"
                          class="bp3-input"
                          name="msTeamKeys.0"
                          placeholder="notifications.enterMicrosoftTeamsUrl"
                          type="text"
                          value="https://www.google.com/"
                        />
                      </div>
                    </div>
                  </div>
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
                    data-testid="remove-msTeamKeys-[0]"
                    style="align-self: flex-start;"
                    type="button"
                  >
                    <span
                      class="bp3-icon StyledProps--main"
                      data-icon="main-trash"
                    >
                      <svg
                        height="18"
                        viewBox="0 0 16 20"
                        width="18"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          clip-rule="evenodd"
                          d="M1.143 8.48A1.2 1.2 0 0 1 2.332 7.12h10.649a1.2 1.2 0 0 1 1.194 1.321l-1.039 10.208a1.2 1.2 0 0 1-1.193 1.079H3.716a1.2 1.2 0 0 1-1.189-1.04L1.143 8.48ZM12.98 8.32H2.332l1.385 10.207h8.226L12.98 8.32ZM5.916 1.594a.6.6 0 0 1 .719-.452l4.224.965a.6.6 0 0 1 .452.719L11 4.179l3.86.882a.6.6 0 0 1-.267 1.17L1.535 3.248a.6.6 0 1 1 .267-1.17l3.805.87.309-1.354Zm.86 1.62 3.056.698.175-.768-3.055-.698-.175.768Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M8 10.808a.5.5 0 0 1 .5.5v5a.5.5 0 0 1-1 0v-5a.5.5 0 0 1 .5-.5ZM5.239 10.82a.5.5 0 0 1 .541.454l.436 4.981a.5.5 0 1 1-.996.087l-.436-4.98a.5.5 0 0 1 .455-.542Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                        <path
                          clip-rule="evenodd"
                          d="M10.762 10.82a.5.5 0 0 1 .455.541l-.436 4.981a.5.5 0 1 1-.996-.087l.435-4.98a.5.5 0 0 1 .542-.455Z"
                          fill="currentColor"
                          fill-rule="evenodd"
                          opacity="0.3"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
                <button
                  class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color Button--without-shadow"
                  data-testid="add-msTeamKeys"
                  style="padding: 0px;"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    plusAdd
                  </span>
                </button>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xxlarge"
              style="align-items: center;"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  test
                </span>
              </button>
              <span
                class="bp3-icon bp3-icon-cross StyledProps--main statusIcon red"
                icon="cross"
              >
                <svg
                  data-icon="cross"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    cross
                  </desc>
                  <path
                    d="M9.41 8l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L6.59 8 3.3 11.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="undefined-1"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="configureMSTeamsNotifications_userGroups"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label"
                    >
                      notifications.labelMSTeamsUserGroups
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                  >
                    <div
                      class="StyledProps--font StyledProps--main pointer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                      >
                        common.selectUserGroups
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-xxlarge StyledProps--margin-bottom-medium"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  submit
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`ConfigureNotifications PagerDuty 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="service-pagerduty"
      >
        <svg
          enable-background="new 0 0 14 14"
          height="24"
          viewBox="0 0 14 14"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m14 .7v12.6c0 .1-.1.2-.1.3-.2.2-.3.4-.6.4-4.2 0-8.3 0-12.5 0-.4 0-.6-.3-.7-.6 0-.1 0-.2 0-.3 0-3.3 0-6.6 0-10 0-.8 0-1.5 0-2.3 0-.1 0-.3.1-.4.1-.2.2-.3.4-.4-.1 0 0 0 .1 0h.1 12.5.1c.1 0 .2.1.3.2s.2.2.3.3z"
            fill="#25bf50"
          />
          <path
            d="m2.4 8.5c0-.8 0-1.6 0-2.4 0-.3.1-.6.3-.9s.5-.4.9-.5h.3 1.5c.3 0 .5 0 .8.2.3.1.5.4.6.8v.4 1.9c0 .3-.1.5-.2.8-.2.3-.5.5-.9.5-.1 0-.2 0-.3 0-.6 0-1.3 0-1.9 0 0 0-.1 0-.1.1v1.6s0 .1-.1.1c-.3 0-.6 0-.9 0 0 0-.1 0-.1-.1.1-.8.1-1.7.1-2.5z"
            fill="#fefefe"
          />
          <path
            d="m11.6 5.6v2.4c0 .2 0 .4-.1.6-.2.4-.5.7-1 .8-.1 0-.2 0-.3 0-.5 0-1 0-1.5 0-.2 0-.4 0-.7-.1-.4-.2-.7-.5-.8-1 0-.1 0-.2 0-.3 0-.6 0-1.2 0-1.8 0-.2 0-.4.1-.6.2-.4.5-.6 1-.7h.3 1.9c.1 0 .1 0 .1-.1 0-.5 0-1 0-1.6 0-.1 0-.1.1-.1h.9c.1 0 .1 0 .1.1-.1.7-.1 1.5-.1 2.4z"
            fill="#fefefe"
          />
          <g
            fill="#25c051"
          >
            <path
              d="m3.4 7.1c0-.4 0-.7 0-1.1 0-.1 0-.1 0-.2s.1-.2.3-.3h.2 1.5.2s.2.1.2.2v.2 1.9.1c0 .2-.1.3-.3.3 0 0 0 0-.1 0-.6 0-1.3 0-1.9 0-.1 0-.1 0-.1-.1 0-.2 0-.6 0-1z"
            />
            <path
              d="m10.6 6.9v1.1c0 .3-.1.4-.4.4-.5 0-1 0-1.5 0-.1 0-.1 0-.2 0s-.2-.1-.2-.2 0-.1 0-.2c0-.6 0-1.3 0-1.9v-.1c0-.2.1-.3.3-.3h.1 1.9c.1 0 .1 0 .1.1-.1.3-.1.7-.1 1.1z"
            />
          </g>
        </svg>
      </span>
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        notifications.titlePagerDuty
      </h1>
      <p
        class="StyledProps--font StyledProps--main"
      >
        notifications.helpPagerDuty
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        notifications.infoPagerDuty
      </p>
      <form
        class="FormikForm--main"
      >
        <div>
          <div
            class="bp3-form-group"
            data-id="key-0"
          >
            <label
              class="bp3-label"
              for="key"
            >
              notifications.labelPDKey
               
              <span
                class="bp3-text-muted"
              />
            </label>
            <div
              class="bp3-form-content"
            >
              <div
                class="bp3-input-group"
              >
                <input
                  autocomplete="off"
                  class="bp3-input"
                  name="key"
                  type="text"
                  value="testKey"
                />
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xxlarge"
            style="align-items: center;"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                test
              </span>
            </button>
          </div>
          <div
            class="bp3-form-group"
            data-id="undefined-1"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="Layout--vertical StyledProps--main"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label"
                >
                  notifications.labelSlackUserGroups
                </p>
                <div
                  class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                >
                  <div
                    class="StyledProps--font StyledProps--main pointer"
                  >
                    <p
                      class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                    >
                      common.selectUserGroups
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-xxlarge"
          >
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--intent-primary Button--with-current-color"
              type="submit"
            >
              <span
                class="bp3-button-text"
              >
                submit
              </span>
            </button>
            <button
              class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                cancel
              </span>
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`ConfigureNotifications Slack 1`] = `
<div>
  <div
    class="body"
  >
    <div
      class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
    >
      <span
        class="bp3-icon StyledProps--main"
        data-icon="service-slack"
      >
        <svg
          enable-background="new 0 0 14 14"
          height="24"
          viewBox="0 0 14 14"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            fill="#e01e5a"
            transform="translate(0 7)"
          >
            <path
              d="m3 1.8c0 .8-.7 1.5-1.5 1.5s-1.5-.7-1.5-1.5.7-1.4 1.5-1.4h1.5z"
            />
            <path
              d="m3.7 1.8c0-.8.7-1.5 1.5-1.5s1.4.7 1.4 1.5v3.7c0 .8-.6 1.5-1.4 1.5s-1.5-.7-1.5-1.5z"
            />
          </g>
          <g
            fill="#36c5f0"
          >
            <path
              d="m5.2 3c-.8 0-1.5-.7-1.5-1.5s.7-1.5 1.5-1.5 1.5.7 1.5 1.5v1.5z"
            />
            <path
              d="m5.2 3.7c.8 0 1.5.7 1.5 1.5s-.7 1.4-1.5 1.4h-3.7c-.8 0-1.5-.6-1.5-1.4s.7-1.5 1.5-1.5z"
            />
          </g>
          <g
            fill="#2eb67d"
            transform="translate(7)"
          >
            <path
              d="m4 5.2c0-.8.7-1.5 1.5-1.5s1.5.7 1.5 1.5-.7 1.5-1.5 1.5h-1.5z"
            />
            <path
              d="m3.3 5.2c0 .8-.7 1.5-1.5 1.5-.8-.1-1.4-.7-1.4-1.5v-3.7c0-.8.6-1.5 1.4-1.5s1.5.7 1.5 1.5z"
            />
          </g>
          <g
            fill="#ecb22e"
            transform="translate(7 7)"
          >
            <path
              d="m1.8 4c.8 0 1.5.7 1.5 1.5s-.7 1.5-1.5 1.5-1.5-.7-1.5-1.5v-1.5z"
            />
            <path
              d="m1.8 3.3c-.8 0-1.5-.7-1.5-1.5.1-.8.7-1.4 1.5-1.4h3.7c.8 0 1.5.6 1.5 1.4s-.7 1.5-1.5 1.5z"
            />
          </g>
        </svg>
      </span>
      <h1
        class="StyledProps--font StyledProps--font-h1 StyledProps--main title"
      >
        notifications.titleSlack
      </h1>
      <p
        class="StyledProps--font StyledProps--main"
      >
        notifications.helpSlack
      </p>
      <p
        class="StyledProps--font StyledProps--main"
      >
        notifications.infoSlack
      </p>
      <div
        class="OverlaySpinner--overlaySpinner"
      >
        <form
          class="FormikForm--main"
        >
          <div>
            <div
              class="bp3-form-group"
              data-id="webhookUrl-0"
            >
              <label
                class="bp3-label"
                for="webhookUrl"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="configureSlackNotifications_webhookUrl"
                >
                  notifications.labelWebhookUrl
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="webhookUrl"
                    type="text"
                    value="http://valid.url"
                  />
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal StyledProps--main StyledProps--margin-bottom-xxlarge"
              style="align-items: center;"
            >
              <div
                class="Button--withDocsTooltip"
                data-tooltip-id="testSlackConfigButton"
              >
                <button
                  class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color"
                  type="button"
                >
                  <span
                    class="bp3-button-text"
                  >
                    test
                  </span>
                </button>
              </div>
            </div>
            <div
              class="bp3-form-group"
              data-id="undefined-1"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="Layout--vertical StyledProps--main"
                >
                  <div
                    class="Text--withDocsTooltip"
                    data-tooltip-id="configureSlackNotifications_userGroups"
                  >
                    <p
                      class="StyledProps--font StyledProps--main StyledProps--font-variation-form-label"
                    >
                      notifications.labelSlackUserGroups
                    </p>
                  </div>
                  <div
                    class="StyledProps--font StyledProps--main bp3-input userGroupInputContainer StyledProps--border StyledProps--padding-xsmall"
                  >
                    <div
                      class="StyledProps--font StyledProps--main pointer"
                    >
                      <p
                        class="StyledProps--font StyledProps--main selectBtn StyledProps--color StyledProps--color-primary7 StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--flex-inline StyledProps--padding-xsmall"
                      >
                        common.selectUserGroups
                      </p>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--margin-top-xxlarge"
            >
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-primary"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  submit
                </span>
              </button>
              <button
                class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-secondary"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  cancel
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;
